<resources>
    <string name="app_name">MANILLAS</string>
    <string name="titulo">Venta de Manillas</string>
    <string name="cantidad">Escriba la Cantidad Deseada</string>
    <string name="boton_calcular">Calcular Costo</string>
    <string name="boton_limpiar">Limpiar</string>
    <string name="costo_unitario">Costo Unitario</string>
    <string name="costo_total">Costo Total</string>
    <string name="nombre">Garibaldi Bandera</string>
    <string name="seleccion_material">Seleccione el tipo de material...</string>
    <string name="opcion_cuero">Cuero</string>
    <string name="opcion_cuerda">Cuerda</string>
    <string name="seleccion_dije">Seleccione el dije...</string>
    <string name="opcion_martillo">Martillo</string>
    <string name="opcion_ancla">Ancla</string>
    <string name="seleccion_tipo_dije">Seleccione el tipo de dije...</string>
    <string name="opcion_oro">Oro</string>
    <string name="opcion_bano_oro">Baño de oro</string>
    <string name="opcion_oro_rosado">Oro rosado</string>
    <string name="opcion_plata">Plata</string>
    <string name="opcion_niquel">Niquel</string>
    <string name="seleccion_tipo_moneda">Seleccione el tipo de moneda...</string>
    <string name="opcion_peso_colombiano">Peso Colombiano</string>
    <string name="opcion_Dolar">Dolar</string>
    <string-array name="opmaterial">
        <item>@string/seleccion_material</item>
        <item>@string/opcion_cuero</item>
        <item>@string/opcion_cuerda</item>
    </string-array>
    <string-array name="opdije">
        <item>@string/seleccion_dije</item>
        <item>@string/opcion_martillo</item>
        <item>@string/opcion_ancla</item>
    </string-array>
    <string-array name="optipodije">
        <item>@string/seleccion_tipo_dije</item>
        <item>@string/opcion_oro</item>
        <item>@string/opcion_bano_oro</item>
        <item>@string/opcion_oro_rosado</item>
        <item>@string/opcion_plata</item>
        <item>@string/opcion_niquel</item>
    </string-array>
    <string-array name="optipomoneda">
        <item>@string/seleccion_tipo_moneda</item>
        <item>@string/opcion_peso_colombiano</item>
        <item>@string/opcion_Dolar</item>
    </string-array>
    <string name="error_cantidad">Escriba la cantidad de manillas deseada</string>
    <string name="error_material">Selecciones el tipo de material deseado</string>
    <string name="error_dije">Selecciones el dije deseado</string>
    <string name="error_tipodije">Selecciones el tipo de dije deseado</string>
    <string name="error_tipomoneda">Selecciones el tipo de moneda deseada</string>

</resources>
