<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/titulo"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/cantidad"
        android:inputType="number"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <Spinner
        android:id="@+id/cmbMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/cmbDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/cmbTipodije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/cmbTipomoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/boton_calcular" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="aux_limpiar"
            android:text="@string/boton_limpiar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtValorunitario"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:text="@string/costo_unitario"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblValorunitario"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtValortotal"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:text="@string/costo_total"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblValortotal"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="#03CF0C"
        android:textSize="10sp"
        android:textStyle="italic" />

</LinearLayout>